2008-09-09  Richard Guenther  <rguenther@suse.de>

	PR middle-end/37354
	PR middle-end/30165
	* g++.dg/torture/pr37354.C: New testcase.

2008-09-09  Aldy Hernandez  <aldyh@redhat.com>

	* gcc.dg/always_inline.c: Place error message on function
	name line.
	* gcc.dg/winline-6.c: Same.
	* gcc.dg/noreturn-1.c: Same.
	* gcc.dg/noreturn-7.c: Same.
	* gcc.dg/inline-14.c: Same.
	* gcc.dg/always_inline3.c: Same.
	* gcc.dg/winline-3.c: Same.
	* gcc.dg/wtr-func-def-1.c: Same.
	* gcc.dg/winline-5.c: Same.
	* gcc.dg/winline-7.c: Same.
	* gcc.dg/winline-9.c: Same.
	* gcc.dg/noreturn-4.c: Same.
	* gcc.dg/20041213-1.c: Use column numbers.

2008-09-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/37433
	* gcc.c-torture/compile/pr37433.c: New testcase.

2008-09-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/37387
	* gcc.c-torture/compile/pr37387.c: New testcase.

2008-09-09  Daniel Kraft  <d@domob.eu>

	PR fortran/37411
	* gfortran.dg/array_function_4.f90: New test.

2008-09-08  Daniel Jacobowitz  <dan@codesourcery.com>
	    Mark Mitchell  <mark@codesourcery.com>

	* g++.dg/compat/eh/filter2_x.C: Declare abort.
	* g++.dg/compat/eh/new1_x.C, g++.dg/compat/eh/new1_y.C: Include
	cstddef and use std::size_t.

	* gcc.dg/compat/compat-common.h: Define SKIP_COMPLEX_INT if
	SKIP_COMPLEX.  Honor SKIP_COMPLEX.
	* gcc.dg/compat/scalar-by-value-3_x.c,
	gcc.dg/compat/scalar-by-value-3_y.c,
	gcc.dg/compat/scalar-by-value-4_x.c,
	gcc.dg/compat/scalar-by-value-4_y.c,
	gcc.dg/compat/scalar-by-value-5.c,
	gcc.dg/compat/scalar-by-value-5_main.c,
	gcc.dg/compat/scalar-by-value-6.c,
	gcc.dg/compat/scalar-by-value-6_main.c,
	gcc.dg/compat/scalar-by-value-6_x.c,
	gcc.dg/compat/scalar-by-value-6_y.c,
	gcc.dg/compat/struct-by-value-16_x.c,
	gcc.dg/compat/struct-by-value-16_y.c,
	gcc.dg/compat/struct-by-value-16a_x.c,
	gcc.dg/compat/struct-by-value-16a_y.c,
	gcc.dg/compat/struct-by-value-17_x.c,
	gcc.dg/compat/struct-by-value-17_y.c,
	gcc.dg/compat/struct-by-value-17a_x.c,