@@ -6,8 +6,8 @@ extern void abort (void);
 
 int test_nested (int i)
 {
-  int __attribute__ ((__noinline__, __regparm__(3))) foo(int j, int k, int l)
-  { /* { dg-error "nested functions are limited to 2 register parameters" } */
+  int __attribute__ ((__noinline__, __regparm__(3))) foo(int j, int k, int l) /* { dg-error "nested functions are limited to 2 register parameters" } */
+  {
     return i + j + k + l;
   }
 
