@@ -4,7 +4,7 @@
 
 typedef double v2df __attribute__ ((vector_size (16)));
 v2df p;
-q(v2df t)
-{			 /* { dg-warning "SSE" "" } */
+q(v2df t) /* { dg-warning "SSE" "" } */
+{
 	p=t;
 }
